Resolved issues issue #1: enhancement: Move to Sync Storage enhancement issue #2: enhancement: Dark mode preference enhancement issue #3: enhancement: Restrict to necessary paths enhancement issue #4: bug: Remove link rewrite for shorts bug

--- a/src/popup.html
+++ b/src/popup.html
@@ -21,7 +21,7 @@
 				<br/>
 			</label>
 
-			<table id="channelAdd" class="table">
+			<table id="channelAdd" class="table add">
 				<tbody>
 					<tr>
 						<td>
@@ -33,7 +33,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<table id="channelList" class="table">
+			<table id="channelList" class="table list">
 				<tbody>
 				</tbody>
 			</table>
